# blog_content_crew

./: README.md  main.py  pyproject.toml
crew/config/: agents.yaml  crew.py  sample_task.yaml  tasks.yaml
crew/config/samples/: enhanced-seo-tasks.yaml  final_meta_analysis_report  sample-crewai-workflow.yaml  sample_task.yaml
crew/config/workflow design/: other crews and teams.md
